trying the utf8 encode for special char

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <button type="button" id="delete">Delete</button>
         </p>
     </form>
-    <table id="response"></table>
+    <p id="response"></p>
+    <table id="tabella"></table>
 
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>              <!-- link to JQUERY libary -->
